CSS - player overflow-x not allowed for Firefox copy text issues

--- a/css/flowplayer.css
+++ b/css/flowplayer.css
@@ -347,7 +347,8 @@
   font-size: 16px;
   position: relative;
   max-height: 100%;
-  overflow: visible;
+  overflow-x: hidden;
+  overflow-y: visible;
   border-radius: .24em;
   background-position: center;
   background-repeat: no-repeat;
